@@ -1,3 +1,10 @@
+2008-04-28  Srinivasa Ragavan  <sragavan@novell.com>
+
+	** Fix for BNC bug #382687
+
+	* itip-formatter.c: (extract_itip_data), (format_itip): Don't download on main thread. It can 
+	cause deadlocks.
+
 2008-02-25  Chenthill Palanisamy  <pchenthill@novell.com>
 
 	* itip-formatter.c: (find_server), (update_attendee_status): Free
